[Fixes #139689611 #139689817] Added condition to ignore items with an empty quantity field to work around the item being considered invalid if it's also out of stock.  Also added max-width for container for search result item descriptions so as to wrap them when they are updated in PDM.

--- a/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/pages/_search-results.scss
+++ b/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/pages/_search-results.scss
@@ -304,3 +304,7 @@
   float:left !important; 
   padding-right:10px;
 }
+
+.search-result-description {
+  max-width: 45%;
+}
